[package]
name = "kvs"
version = "0.1.0"
authors = ["Chris Wren <chriswrendeveloper@gmail.com>"]
description = "A key-value store"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.34.6"
crossbeam = "0.7.1"
rayon = "1.0.3"
num_cpus = "1.10.0"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = "0.6.5"
criterion = "0.3"
panic-control = "0.1.4"
crossbeam-utils = "0.6.5"

[[bench]]
name = "single_threaded"
harness = false

[[bench]]
name = "multi_threaded"
harness = false
